<resources>
    <string name="app_name" translatable="false">Namaz Alert</string>
    <string name="team_Name" translatable="false">Weekend Creator Studio</string>
    <string name="rating_link_text" translatable="false">https://play.google.com/store/apps/details?id=com.sudoajay.qr_and_barcode_scanner</string>
    <string name="privacy_link_text" translatable="false">https://sudoajay.github.io/qr-and-barcode-scanner_privacy%20copy.html</string>
    <string name="moreApp_link_text" translatable="false">https://play.google.com/store/apps/dev?id=5309601131127361849</string>
    <string name="search_optionMenu" translatable="false">Search</string>
    <string name="refresh_optionMenu" translatable="false">Refresh</string>
    <string name="refresh_text" translatable="true">Refresh</string>
    <string name="send_feedback_text" translatable="true"> Send Feedback</string>
    <string name="fajr_time_text" translatable="false">FAJR \n%1$s</string>
    <string name="dhuhr_time_text" translatable="false">DHUHR \n%1$s</string>
    <string name="asr_time_text" translatable="false">ASR \n%1$s</string>
    <string name="maghrib_time_text" translatable="false">MAGHRIB \n%1$s</string>
    <string name="isha_time_text" translatable="false">ISHA \n%1$s</string>
    <string name="fajr_namaz_time_text" translatable="false">Fajr Namaz \n%1$s</string>
    <string name="dhuhr_namaz_time_text" translatable="false">Dhuhr Namaz \n%1$s</string>
    <string name="asr_namaz_time_text" translatable="false">Asr Namaz \n%1$s</string>
    <string name="maghrib_namaz_time_text" translatable="false">Maghrib Namaz \n%1$s</string>
    <string name="isha_namaz_time_text" translatable="false">Isha Namaz \n%1$s</string>
    <string name="right_hand_side_time_text" translatable="true">%1$s:00 min</string>
    <string name="left_hand_side_time_text" translatable="true">%1$s</string>
    <string name="minute_text" translatable="true">Minute</string>
    <string name="hour_text" translatable="true">Hour</string>
    <string name="reset_text" translatable="true">Reset</string>
    <string name="do_you_want_to_set_text" translatable="true">Do you really want to set the default time?</string>
    <string name="am_text" translatable="true">am</string>
    <string name="pm_text" translatable="true">pm</string>
    <string name="successfully_selected_text" translatable="true">Successfully Selected</string>
    <string name="you_cant_select_30min_text" translatable="true"> You can\'t select past the maximum limit of 30 mins</string>
    <string name="you_cant_past_select_30min_text" translatable="true"> You can\'t select past 30 mins</string>
    <string name="you_cant_select_text" translatable="true"> You can\'t select past the maximum limit </string>
    <string name="time_reset_successfully_text" translatable="true"> Time Reset Successfully </string>
    <string name="activate_at_text" translatable="true">Turn The Phone Silent At :</string>
    <string name="activate_for_text" translatable="true">Silent Duration :</string>
    <string name="add_Screenshot_Small_text" translatable="false">Add Screenshot Small</string>
    <string name="add_Screenshot_Large_text" translatable="false">Add Screenshot Large</string>
    <string name="close_Image_text" translatable="false">Close Image</string>
    <string name="feedbackEditTextHint" translatable="true">Please write your feedback</string>
    <string name="describe_your_issue_text" translatable="true">Describe your issue</string>
    <string name="feedbackEditTextError" translatable="true">Please write something in feedback</string>
    <string name="supportEditTextError" translatable="true">Please write something in issue</string>
    <string name="systemInfo_text" translatable="true">Your System Info will be send to our developer team</string>
    <string name="add_screenshot_text" translatable="true">+ Add Screenshot</string>
    <string name="send_issue_text"  translatable="true">Send Issue</string>
    <string name="feedback_about_app_text"  translatable="true">FeedBack about %1$s</string>
    <string name="issue_in_app_text"  translatable="true">Issue in %1$s</string>
    <string name="wifi_text"  translatable="true">Wifi</string>
    <string name="mobile_data_text" translatable="true">Mobile Data</string>
    <string name="vpn_text"  translatable="true">Vpn</string>
    <string name="no_internet_text" translatable="true">No Internet</string>
    <string name="successfully_cache_data_is_deleted_text"  translatable="true">Successfully Cache Data Is Deleted</string>
    <string name="system_info_text"  translatable="true"> System Info </string>
    <string name="device_text"  translatable="true">Device : </string>
    <string name="os_api_level_text"  translatable="true">Os Api Level : </string>
    <string name="language_text"  translatable="true">Language : </string>
    <string name="total_memory_text"  translatable="true">Total Heap Memory : </string>
    <string name="free_memory_text"  translatable="true">Free Heap Memory : </string>
    <string name="screen_Text"  translatable="true">Screen Size : </string>
    <string name="network_type_text"  translatable="true">Network Type : </string>
    <string name="app_version_text"  translatable="true">App Version : </string>
    <string name="ok_text"  translatable="true">OK</string>
    <string name="system_setting_text"  translatable="true">System Settings</string>
    <string name="clear_cache_text"  translatable="true">Clear Cache</string>
    <string name="help_support_text"  translatable="true">Help &amp; Support</string>
    <string name="privacy_policy_text"  translatable="true">Privacy Policy</string>
    <string name="more_info_text" translatable="true">More Info</string>
    <string name="share_app_text" translatable="true">Share App</string>
    <string name="submit_review_text" translatable="true">Submit Review</string>
    <string name="more_app_text" translatable="true">More Apps</string>
    <string name="about_app_text" translatable="true">About App</string>
    <string name="setting_text" translatable="true">Setting</string>
    <string name="shareMessage" translatable="true">Hey, check This App which helps you to Delete Duplicate and Unnecessary Data from the phone -</string>
    <string name="normal_mode" translatable="true">Normal</string>
    <string name="vibrate_mode" translatable="true">Vibrate</string>
    <string name="silent_mode" translatable="true">Silent</string>
    <string name="phone_mode_text" translatable="true">Phone Mode</string>
    <string name="app_setting_text" translatable="true">App Setting</string>
    <string name="change_language_text" translatable="true">"Change Language "</string>
    <string name="developer_name" translatable="true">Created by %1$s</string>
    <string name="share_code_text" translatable="true">Share Code</string>
    <string name="workOnProgress_text" translatable="true">Work On Progress</string>
    <string name="click_back_text" translatable="true">Click Back Again To Exit</string>
    <string name="shortcut_phone_mode_text" translatable="false">Phone Mode</string>
    <string name="shortcut_notification_sound_text" translatable="false">Notification Sound</string>
    <string name="shortcut_next_prayer_text" translatable="false">Next Prayer</string>
    <string name="default_prayer_time_proto" translatable="false">-5:10</string>
    <string name="yes_string" translatable="true">Yes</string>
    <string name="no_string" translatable="true">No</string>
    <string name="notification_main_services" translatable="false">Main Services</string>
    <string name="notifications_upcoming_prayer_time" translatable="false">UpComing Prayer Time</string>
    <string name="notifications_alert_default_prayer_time" translatable="false">Alert Default Prayer Time</string>
    <string name="notifications_alert_sound_prayer_time" translatable="false">Alert Sound Prayer Time</string>
    <string name="notifications_finish_prayer_time" translatable="false">Finish Or Cancel Prayer</string>
    <string name="firebase_channel_id" translatable="false">Firebase Push Notification</string>
    <string name="notifications_group_service"  translatable="false">Firebase Service control</string>
    <string name="notifications_upcoming_desc" translatable="false">Notifications to interact with UpComing  Prayer Time</string>
    <string name="notifications_alert_desc" translatable="false">Notifications to interact with Alert  Prayer Time</string>
    <string name="notifications_finish_desc" translatable="false">Notifications to interact with Finish or Cancel Prayer </string>
    <string name="notification_title_text" translatable="true">Prayer Alert: %1$s</string>
    <string name="notification_context_title_text" translatable="true">%1$s. Expand to see more</string>
    <string name="notification_setting_text" translatable="true">Setting</string>
    <string name="notification_dismiss_text" translatable="true">Dismiss</string>
    <string name="notification_ok_text" translatable="true">OK</string>
    <string name="alarm_alert_hold_the_button_text" translatable="true">Hold the button!</string>
    <string name="notification_turn_off_text" translatable="false">Turn Off</string>
    <string name="cancel_the_notification_prayer" translatable="true">You\'ve canceled the %1$s namaz prayer schedule</string>
    <string name="click_here_to_setup_text" translatable="true">Click here to set it up again</string>
    <string name="your_device_will_be_text" translatable="true">Your device will be in %1$s mode for the next %2$s minutes</string>
    <string name="completed_the_notification_prayer" translatable="true">You\'ve completed your %1$s namaz prayer schedule</string>
    <string name="your_device_is_now_text" translatable="true">Your device is now set to the %1$s mode</string>
    <string name="default_ringtone_text" translatable="true">Default </string>
    <string name="azan_in_islam_text" translatable="true">Azan In Islam</string>
    <string name="notification_sound_text" translatable="true">Notification Sound</string>
    <string name="upcoming_notification_title_text" translatable="false">Turn Off Your Upcoming Prayer ?</string>
    <string name="upcoming_notification_context_title_text" translatable="false">%1$s %2$s</string>
    <string name="select_language_text" translatable="true">Select Language</string>
    <string name="continue_text" translatable="true">Continue</string>
    <string name="select_language_bracket" translatable="false">( %1$s )</string>
    <string name="select_notification_sound_text" translatable="true">Notification Sound</string>
    <string name="require_do_not_disturb_permission_text" translatable="true">The app requires Do Not Disturb Permission</string>
    <string name="require_uses_do_not_disturb_permission_text" translatable="true">The app needs the do not disturb permission to switch to silent or vibrate mode during its active sessions.</string>
    <string name="we_do_not_collect_text" translatable="true">We do not collect or share any personal or sensitive information provided by do not disturb permission.</string>
    <string name="all_information_provided_by_text" translatable="true">All information provided by do not disturb permission is kept locally on your devices and is only sent to us with your consent for troubleshooting purpose.</string>
    <string name="allow_text" translatable="true">Allow</string>
    <string name="do_not_disturb_permission_text" translatable="true">DND Permission</string>
    <string name="how_was_your_experience_text" translatable="true">How was your experience with this app?</string>
    <string name="no_thanks_text" translatable="true">No Thanks</string>
    <string name="lets_use_know_text" translatable="true">Let us Know what we can do to improve the app?</string>
    <string name="thanks_so_much_text" translatable="true">Thanks so much!</string>
</resources>