<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/app_setting_text">


        <Preference
            app:key="changeLanguage"
            app:title="@string/change_language_text" />

        <ListPreference
            android:defaultValue="@string/vibrate_mode"
            android:entries="@array/phoneMode"
            android:entryValues="@array/phoneMode"
            android:key="phoneMode"
            android:title="@string/phone_mode_text" />

        <Preference
            app:key="notificationSound"
            app:title="@string/notification_sound_text" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/system_setting_text">

        <Preference
            app:key="doNotDisturbPermission"
            app:title="@string/do_not_disturb_permission_text"/>


        <Preference
            app:key="clearCache"
            app:title="@string/clear_cache_text" />



    </PreferenceCategory>

    <PreferenceCategory app:title="@string/help_support_text">
        <Preference
            android:key="privacyPolicy"
            android:title="@string/privacy_policy_text" />
        <Preference
            android:key="sendFeedback"
            android:title="@string/send_feedback_text" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/more_info_text">
        <Preference
            android:key="shareApp"
            android:title="@string/share_app_text" />
        <Preference
            android:key="submitReview"
            android:title="@string/submit_review_text" />
        <Preference
            android:key="moreApps"
            android:title="@string/more_app_text" />
        <Preference
            android:key="aboutApp"
            android:title="@string/about_app_text" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
