<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="bottomSheet"
            type="com.sudoajay.triumph_path.ui.bottomSheet.DoNotDisturbPermissionBottomSheet" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainBgColor">


        <View
            android:id="@+id/view"
            android:layout_width="35dp"
            android:layout_height="5dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottom_sheet_top_effect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appInfo_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/appName_TextView"
                style="@style/TextAppearance.AppTheme.Headline4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/require_do_not_disturb_permission_text"
                android:textColor="@color/appTheme"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sendFeedback_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appInfo_ConstraintLayout">

            <TextView
                android:id="@+id/sendFeedback_TextView"
                style="@style/TextAppearance.AppTheme.Headline4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/require_uses_do_not_disturb_permission_text"
                android:textColor="@color/headingNormalTextColor"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/aboutMe_ConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sendFeedback_ConstraintLayout">

            <TextView
                android:id="@+id/aboutMe_TextView"
                style="@style/TextAppearance.AppTheme.Headline4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/gap_margin_left_right"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/we_do_not_collect_text"
                android:textColor="@color/headingNormalTextColor"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppTheme.Headline4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:text="@string/all_information_provided_by_text"
            android:textColor="@color/headingNormalTextColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutMe_ConstraintLayout" />


        <TextView
            android:id="@+id/noThanks_TextView"
            style="@style/TextAppearance.AppTheme.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:onClick="@{() -> bottomSheet.onClickNoThanks()}"
            android:text="@string/no_thanks_text"
            android:textColor="@color/appTheme"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/loginOrLogout_MaterialButton"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginOrLogout_MaterialButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nunito_bold"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/allow_text"
            android:textAllCaps="true"
            android:onClick="@{() -> bottomSheet.onClickAllow()}"
            android:textColor="@color/whiteColor"
            android:textSize="16sp"
            app:backgroundTint="@color/appTheme"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/noThanks_TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/noThanks_TextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>